# djangocms-automation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
djangocms_automation/: admin.py  apps.py  cms_config.py  cms_plugins.py  cms_toolbars.py  constants.py  engine.py  forms.py  instances.py  llm.py  models.py  services.py  tasks.py  transitions.py  triggers.py  urls.py  utils.py  views.py  widgets.py
djangocms_automation/actions/: __init__.py  llm_action.py  mail.py  model_actions.py  user_input.py
djangocms_automation/management/commands/: runautomations.py
djangocms_automation/migrations/: 0001_initial.py  0002_automationinstance_initial_data.py  0002_automationtrigger_type.py  0002_ifpluginmodel_question_alter_ifpluginmodel_condition.py  0003_alter_ifpluginmodel_uuid.py  0003_baseactionpluginmodel.py  0004_rename_status_automationaction_plugin_ptr_and_more.py  0005_automationaction_parent_splitpluginmodel_comment_and_more.py  0006_action_attempts_and_events.py  0006_engine_hardening.py  0007_rename_actionplugin.py  0008_action_proxies.py  0009_add_idempotency_key.py  0010_action_attempts_and_events.py
djangocms_automation/static/djangocms_automation/css/: charts.css  condition_builder.css  error_popup.css  plugin_data_form.css
djangocms_automation/static/djangocms_automation/js/: add_buttons.js  automation_connectors.js  condition_builder.js  error_popup.js  trigger_select.js  trigger_type_change.js
djangocms_automation/static/djangocms_automations/css/: charts.css
djangocms_automation/templates/djangocms_automation/: automation_detail.html
djangocms_automation/templates/djangocms_automation/admin/: open_tasks.html
djangocms_automation/templates/djangocms_automation/includes/: add.html  errors.html  pause.html
djangocms_automation/templates/djangocms_automation/modifiers/: end.html  general.html  trigger.html
djangocms_automation/templates/djangocms_automation/plugins/: action.html  end.html  if.html  if_else.html  if_then.html  join.html  noop.html  path.html  split.html  trigger.html
djangocms_automation/templatetags/: automation_tags.py
djangocms_automation/utilities/: conditions.py  expressions.py  json.py  templates.py
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: .gitkeep
docs/source/_templates/: .gitkeep
docs/source/explanation/: architecture.rst  index.rst
docs/source/howto/: actions.rst  index.rst  triggering.rst  webhooks.rst
docs/source/reference/: djangocms_automation.rst  engine.rst  index.rst  instances.rst  models.rst  modules.rst  tasks.rst  triggers.rst  utilities.rst  utilities_json.rst
docs/source/tutorials/: getting-started.rst  index.rst  installation.rst
tests/: TEST_README.md  __init__.py  conftest.py  settings.py  test_action_config.py  test_admin_views.py  test_apikey.py  test_apikey_admin.py  test_automation_run.py  test_basic.py  test_conditional_run.py  test_conditions.py  test_engine.py  test_expressions.py  test_form_trigger.py  test_forms.py  test_instances.py  test_json_utilities.py  test_llm_action.py  test_mail_action.py  test_model_actions.py  test_node_states.py  test_services.py  test_templates.py  test_templatetags.py  test_thread_backend.py  test_toolbar.py  test_transitions.py  test_trigger_admin.py  test_trigger_model.py  test_triggers.py  test_user_input_action.py  test_views.py  test_webhooks.py  test_widgets.py  urls.py
tests/requirements/: base.txt
