[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "setuptools-scm" ]

[project]
name = "djangocms-automation"
description = "Automation tools for django CMS projects"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  { name = "Fabian Braun", email = "fsbraun@gmx.de" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Framework :: Django CMS :: 5.0",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "django>=6",
  "django-cms>=4.1",
  "jsonschema>=4.22",
]
optional-dependencies.llm = [
  "litellm>=1.60",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
  "pytest-django",
]
urls.Homepage = "https://github.com/fsbraun/djangocms-automation"
urls.Issues = "https://github.com/fsbraun/djangocms-automation/issues"

[tool.setuptools]
packages.find.where = [ "." ]
packages.find.include = [ "djangocms_automation*" ]
package-data."*" = [
  "*.mo",
  "*.po",
  "locale/**/*",
  "static/**/*",
  "templates/**/*.html",
]
dynamic.version = { attr = "djangocms_automation.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 119
exclude = [ "djangocms_automation/migrations" ]
lint.ignore = []
lint.mccabe.max-complexity = 5

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "." ]
ini_options.python_files = [ "*_tests.py", "test_*.py", "tests.py" ]
ini_options.addopts = [ "--tb=short", "--strict-markers", "--nomigrations" ]
ini_options.markers = [
  "django_db: mark test as requiring database access",
]
ini_options.DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.coverage]
run.omit = [
  "djangocms_automation/migrations/*",
]
run.source = [
  "djangocms_automation",
]
